5497: Punti default filtrati

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,71 @@
 
         <details open>
           <summary>
+            2025-11-25 - Punti default per containers
+            <small>(branch Container)</small>
+          </summary>
+          <div class="card">
+            <div class="card-title">Punti default containers</div>
+            <div class="card-body">
+              <section>
+                <p>
+                  All'interno delle impostazioni dei containers è presente una
+                  sezione che permette di personalizzare i punti default quando
+                  l'utente entra all'interno della registrazione dei containers
+                </p>
+                <img
+                  src="../assets/Container/Impostazioni/PuntiDefaultMultipli.png"
+                  width="auto"
+                />
+                <br>
+                <h4>Come funziona</h4>
+                <p>
+                  Qui si possono aggiungere più punti di carico/scarico che
+                  verranno inseriti automaticamente all'interno del container
+                  quando l'utente entra nella registrazione
+                </p>
+                <p>
+                  Con questa nuova funzione sarà possibile selezionare un
+                  cliente, una sua sede se presente, ed il tipo di conferma per
+                  il quale si vuole creare una registrazione di punti default
+                </p>
+                <p>
+                  Mettiamo caso che vengano registrati 4 punti default per il
+                  cliente "A":<br />
+                  Una volta entrati nella registrazione container se l'utente
+                  seleziona questo cliente verranno automaticamente caricati
+                  nella registrazione i punti salvati all'interno delle
+                  impostazioni
+                </p>
+                <h4>Logica di distinzione set</h4>
+                <p>
+                  Se viene registrato per lo stesso cliente un set di punti
+                  default per tipo conferma = "Import" questo set di punti
+                  default verrà utilizzato solamente quando nella registrazione
+                  verrà inserito il cliente "A" e tipo di conferma "Import"<br />
+                  Se invece seleziona "Export" ad esempio, verranno caricati i
+                  punti default generici del cliente "A"
+                </p>
+                <h4>Copiare set di punti</h4>
+                <p>
+                  C'è inoltre la possibilità di copiare un set di punti
+                  registrati per un cliente (o altro tipo di filtro) per
+                  qualsiasi altra selezione<br />
+                  Per fare questa cosa, prima selezionare i filtri sui quali
+                  si vuole copiare il set di punti, poi premere il tasto in alto
+                  a destra della finestra.<br />
+                  Verrà aperta una finestra di dialogo identica a quella
+                  precedente che permetterà di visualizzare tutti i set di punti
+                  default. Una volta trovato il set che si vuole copiare premere
+                  di nuovo il pulsante in alto a destra
+                </p>
+              </section>
+            </div>
+          </div>
+        </details>
+
+        <details open>
+          <summary>
             2025-11-24 - Rilocazione di SatToolsR - Campi completamento
             automatico <small>(Branch container)</small>
           </summary>
