--- a/spese/indice-spese.html
+++ b/spese/indice-spese.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spese Elite</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -14,7 +16,8 @@
 
         <section>
             <h2>📌 Descrizione</h2>
-            <p>Questa sezione fornisce un indice delle spese gestite nel sistema Elite, suddivise per categorie e tipologie.</p>
+            <p>Questa sezione fornisce un indice delle spese gestite nel sistema Elite, suddivise per categorie e
+                tipologie.</p>
         </section>
 
         <section>
@@ -22,6 +25,7 @@
             <ul>
                 <li><a href="../spese/riepilogo-analisi-aziendale.html">Riepilogo Analisi Aziendale</a></li>
                 <li><a href="../spese/spese-viaggio-base.html">Spese Viaggio Base</a></li>
+                <li><a href="../spese/ripartizione-importi.html">Ripartizione Importi Tratte</a></li>
                 <!-- <li><a href="./spese/spese-veicolo.html">Spese Veicolo</a></li>
                 <li><a href="./spese/spese-autista.html">Spese Autista</a></li>
                 <li><a href="./spese/spese-ordine-trasporto.html">Spese Ordine di Trasporto</a></li> -->
@@ -30,4 +34,5 @@
 
     </div>
 </body>
+
 </html>
