aggiunta continuita tratte

--- a/planner/master-lista-planner.html
+++ b/planner/master-lista-planner.html
@@ -35,6 +35,9 @@
                     <a href="../planner/solo-righe.html">🎼 Visualizzazione SoloRighe</a>
                 </li>
                 <li>
+                    <a href="../planner/calendario-continuita-tratte.html">📋 Visualizzazione Continuità Tratte</a>
+                </li>
+                <li>
                     <a href="../planner/controlli-comuni.html">🧩 Controlli Comuni</a>
                 </li>
             </ul>
