--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     <section>
       <h2>📖 Guida Elite</h2>
       <ul>
-        <!-- Aggiungi altri collegamenti qui in futuro -->
+        <li>
+          <a href="./menu/master-menu.html">🍽️ Menu Elite</a>
+        </li>
         <li>
           <a href="./ordini/master-lista-ordini.html">📦 Gestione Ordini</a>
         </li>
