--- a/menu/master-menu.html
+++ b/menu/master-menu.html
@@ -19,10 +19,10 @@
         <section>
             <ul>
                 <li>
-                    <a href="../menu/login-menu.html"> Operazioni al login</a>
+                    <a href="../menu/login-menu.html">1️⃣ Operazioni al login</a>
                 </li>
                 <li>
-                    <a href="../menu/menu-principale.html"> Schermata Principale</a>
+                    <a href="../menu/menu-principale.html">2️⃣ Schermata Principale</a>
                 </li>
             </ul>
         </section>
