aggiunta guida clienti

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <a href="./menu/master-menu.html">🍽️ Menu Elite</a>
         </li>
         <li>
+          <a href="./anagrafiche/master-anagrafiche.html">👨‍💼 Anagrafiche</a>
+        </li>
+        <li>
           <a href="./ordini/master-lista-ordini.html">📦 Gestione Ordini</a>
         </li>
         <li>
