--- a/anagrafiche/master-anagrafiche.html
+++ b/anagrafiche/master-anagrafiche.html
@@ -22,6 +22,12 @@
                 <li>
                     <a href="../anagrafiche/clienti-vettori.html">👨‍💼 Clienti e Vettori</a>
                 </li>
+                <li>
+                    <a href="../anagrafiche/dipendenti.html">👨 Dipendenti</a>
+                </li>
+                <li>
+                    <a href="../anagrafiche/mezzi.html">🚚 Mezzi</a>
+                </li>
             </ul>
         </section>
 
