aggiunti i mittenti destinatari

--- a/anagrafiche/master-anagrafiche.html
+++ b/anagrafiche/master-anagrafiche.html
@@ -28,6 +28,9 @@
                 <li>
                     <a href="../anagrafiche/mezzi.html">🚚 Mezzi</a>
                 </li>
+                <li>
+                    <a href="../anagrafiche/mittenti-destinatari.html">🏭 Mittenti e Destinatari</a>
+                </li>
             </ul>
         </section>
 
