dettagliato bene i prezzi

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <a href="./ordini/master-lista-ordini.html">📦 Gestione Ordini</a>
         </li>
         <li>
+          <a href="./prezzi/master-prezzi.html">💸 Prezzi e tariffe</a>
+        </li>
+        <li>
           <a href="./planner/master-lista-planner.html">🪽 Planner</a>
         </li>
         <!-- Capitolo delle spese -->
