pubblicati servizi accessori

--- a/prezzi/master-prezzi.html
+++ b/prezzi/master-prezzi.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="../prezzi/base-listini.html">🚂 Motore Listini</a>
                 </li>
+                <li>
+                    <a href="../prezzi/servizi-accessori.html">🛠️ Servizi Accessori</a>
+                </li>
             </ul>
         </section>
 
