Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,6 +17,24 @@
         <h2>🆕 Novità recenti</h2>
 
         <details open>
+          <summary>2025-11-27 - Gestione Accise</summary>
+
+          <div class="card">
+            <div class="card-title">Gestione Accise HVO</div>
+            <div class="card-body">
+              <section>
+                <p>
+                  Nell’inserimento delle accise, dovendo inserire valori diversi, è stata fatta la diversificazione tra Gasolio e HVO. E’ stata aggiunta nella tabella Accise la colonna Tipo dove viene registrato il valore GASOLIO o HVO.
+                  All’apertura del modulo viene fatta una query per aggiornare le registrazioni presenti con il valore GASOLIO
+                </p>
+                <br />
+                <img src="../assets/rifornimenti/accise.png" width="auto" />
+              </section>
+            </div>
+          </div>
+        </details>
+
+        <details>
           <summary>
             2025-11-25 - Punti default per containers
             <small>(branch Container)</small>
@@ -81,7 +99,7 @@
           </div>
         </details>
 
-        <details open>
+        <details>
           <summary>
             2025-11-24 - Rilocazione di SatToolsR - Campi completamento
             automatico <small>(Branch container)</small>
