Rimorchi Tutti Vettore

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,24 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-12-04 - Rimorchi Tutti Vettore</summary>
+
+        <div class="card">
+          <div class="card-title">Rimorchi Tutti Vettore</div>
+          <div class="card-body">
+            <section>
+              <p>Nel planner ora si possono vedere tutti i rimorchi, anche queando viene selezionato un vettore
+                specifico
+              </p>
+              <p>Per farlo si seleziona dalle impostazioni del planner</p>
+              <br />
+              <img src="../assets/pianificazione/visnomevettore.png" width="auto" />
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-12-04 - Flag No_Elenco</summary>
 
         <div class="card">
@@ -28,13 +46,12 @@
                 Il flag No_Elenco ora ha un senso. Viene usato per escludere i mezzi solo dai <strong>Viaggi</strong> e
                 solo dal <strong>planner</strong>
               </p>
-              <br />
             </section>
           </div>
         </div>
       </details>
 
-      <details open>
+      <details>
         <summary>2025-11-27 - Gestione Accise</summary>
 
         <div class="card">
