Add new features for Fatturazione with images and descriptions

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,7 +18,25 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
-        <summary>2025-12-04 - Rimorchi Tutti Vettore</summary>
+        <summary>2025-12-23 - Fatturazione attiva Iva/Esenzioni</summary>
+
+        <div class="card">
+          <div class="card-title">Fatturazione attiva Iva/Esenzioni</div>
+          <div class="card-body">
+            <section>
+              <p>In Fatturazione attiva -> Impostazioni -> Visualizzazioni, c’è la nuova funzione ‘Visualizza Codice + Descrizione nei menu iva/Esenzioni’ 
+              </p>
+              <img src="../assets/Fatturazione/fattatt01.png" width="auto" />
+              <p>Questa funzione fa vedere nei menu dell’iva sia sui prezzi delle manuali che nelle 3 aggiunte per tutte le fatture le esenzioni con il proprio codice (ordinate per codice). </p>
+              <br />
+              <img src="../assets/Fatturazione/fattatt02.png" width="auto" />
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
+        <summary>2025-12-05 - Rimorchi Tutti Vettore</summary>
 
         <div class="card">
           <div class="card-title">Rimorchi Tutti Vettore</div>
