Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -15,8 +15,37 @@
 
       <section>
         <h2>🆕 Novità recenti</h2>
-
+        
         <details open>
+          <summary>
+            2025-01-13 - Concatenazione prodotti in fatturazione attiva
+          </summary>
+
+          <div class="card">
+            <div class="card-title">
+              Concatenazione prodotti in fatturazione attiva
+            </div>
+            <div class="card-body">
+              <section>
+                <p>
+                  In fatturazione attiva nelle impostazioni di visualizzazione è stata aggiornata l’impostazione della concatenazione dei prodotti. 
+                  Ora se attiva la concatenazione si possono scegliere fino a 6 modalità di concatenazione, descritte in figura. 
+                </p>
+                <img src="../assets/Fatturazione/concatenazione1.png" width="auto" />
+                <p>
+                  Perché il tutto funzioni però, è necessario estrarre la colonna ProdottiConcatenati 
+                </p>
+                <img src="../assets/Fatturazione/concatenazione2.png" width="auto" />
+                <p>
+                  La colonna che ne esce in Genera fatture mostrerà la scelta fatta nelle impostazioni, e permetterà la ricerca al suo interno dei prodotti 
+                </p>
+                <img src="../assets/Fatturazione/concatenazione3.png" width="auto" />
+              </section>
+            </div>
+          </div>
+        </details>
+
+        <details>
           <summary>
             2025-12-29 - Visualizzazione tutti listini nel portale CRM -
             Visualizzazione contatti cliente da CRM
